--- a/create.html
+++ b/create.html
@@ -19,7 +19,6 @@
   <body>
 
     <div class="container">
-      <form action="http://104.131.219.239:3060/createprediction">
       <div class="jumbotron">
         <div>
           <select id="selected-symbol" class='form-control symbol-dropdown'>
@@ -57,20 +56,27 @@
             <input id="p-predictor" type="text">
         </p>
 
-
         <button id="p-create-button" class="btn btn-lg btn-custom main-button">Create Prediction</button>
       </div>
+
+      <form id="prediction-creation-form" action="http://104.131.219.239:3060/createprediction" style="display: none;">
+          <input id="prediction-create-form-predictor" name="predictor" />
+          <input id="prediction-create-form-object" name="object" />
+          <input id="prediction-create-form-action" name="action" />
+          <input id="prediction-create-form-value" name="value" />
+          <input id="prediction-create-form-end" name="end" />
       </form>
 
       <footer style="display: none;" class="row">
         <hr>
         <p class="col-lg-6">
           <span style="background-color: #53B981;" class="badge">
-            <a style="color: white;" href="/.">Home</a></span>
+            <a style="color: white;" href="/.">Home</a>
           </span>
           <span style="background-color: #53B981;" class="badge">
-            <a style="color: white;" href="create">Create</a></span>
+            <a style="color: white;" href="create">Create</a>
           </span>
+          <div id="prediction-create-errors" style="display: none;"></div>
         </p>
         <p class="col-lg-6" id="copyright-notice">&copy; <a class="a-custom" href="http://www.antoinedahan.com">Antoine Dahan</a></p>
       </footer>
@@ -93,33 +99,93 @@
           */
         $("#p-create-button").on("click", function() {
             alert("create clicked");
-
+            // clear the errors area
+            $("#prediction-create-errors").html("");
+            $("#prediction-create-errors").hide();
+            // grab the input values
             var endYear = $("#p-end-year").val();
             var endMonth = $("#p-end-month").val();
             var endDay = $("#p-end-day").val();
             var endTime = $("#p-end-time");
-
-            if (endTime.trim().length > 0 && endTime.indexOf(":") > -1) {
+            var predictor = $("#p-predictor").val();
+            var object = $("#p-object").val();
+            var action = $("#p-action").val();
+            var value = $("#p-value").val();
+            // check the required fields are all filled
+            if (endYear.length > 0
+                && endMonth.length > 0
+                && endDay.length > 0
+                && endTime.trim().length > 0
+                && endTime.indexOf(":") > -1
+                && predictor.trim().length > 0
+                && object.trim().length > 0
+                && action.trim().length > 0
+                && value.trim().length > 0) {
+                // create the end date object for the prediction end
                 var colonIndex = endTime.indexOf(":");
                 var hour = parseInt(0, endTime.trim().substring(colonIndex));
                 var minute = parseInt(endTime.trim().substring(colonIndex));
-
                 var endDate = new Date(endYear, endMonth, endDay, hour, minute, 0, 0);
 
-                var predictor = $("#p-predictor").val(); // todo: input for predictor
-                var object = $("#p-object").val();
-                var action = $("#p-action").val();
-                var value = $("#p-value").val();
+                // create the endpoint using the input values
+                /*var createPredictionUrl = "http://104.131.219.239:3060/createprediction?type=stock";
+                createPredictionUrl += "&predictor=";
+                createPredictionUrl += predictor;
+                createPredictionUrl += "&object=";
+                createPredictionUrl += object;
+                createPredictionUrl += "&action=";
+                createPredictionUrl += action;
+                createPredictionUrl += "&value=";
+                createPredictionUrl += value;
+                createPredictionUrl += "&end=";
+                createPredictionUrl += endDate.getTime();*/
+                
+                // fill out prediction creation form and post it to the server
+                $("#prediction-create-form-predictor").val(predictor);
+                $("#prediction-create-form-object").val(object);
+                $("#prediction-create-form-action").val(action);
+                $("#prediction-create-form-value").val(value);
+                $("#prediction-create-form-end").val(endDate.getTime());
+                $("#prediction-creation-form").submit();
+            }
 
-                var endpointUrl = "?type=stock";
-                endpointUrl += "&object=";
-                endpointUrl += object;
-                endpointUrl += "&action=";
-                endpointUrl += action;
-                endpointUrl += "&value=";
-                endpointUrl += value;
-                endpointUrl += "&end=";
-                endpointUrl += endDate.getTime();
+            else {
+                var errorMessage = "";
+                if (endYear.length == 0) {
+                    errorMessage += "Prediction end Year input was left blank.";
+                    errorMessage += "<br/>";
+                }
+                if (endMonth.length == 0) {
+                    errorMessage += "Prediction end Month input was left blank.";
+                    errorMessage += "<br/>";
+                }
+                if (endDay.length == 0) {
+                    errorMessage += "Prediction end Day input was left blank.";
+                    errorMessage += "<br/>";
+                }
+                if (endTime.trim().length == 0 || endTime.indexOf(":") > -1) {
+                    errorMessage += "Prediction end time input is not complete (make sure hour, minutes, and AM/PM is set.";
+                    errorMessage += "<br/>";
+                }
+                if (predictor.trim().length == 0) {
+                    errorMessage += "The email or phrase to assosiate with this prediction was left blank. Filling this in with an email/phrase allows you to view all your predictions on one page and share them with friends.";
+                    errorMessage += "<br/>";
+                }
+                if (object.trim().length == 0) {
+                    errorMessage += "The name of the stock was left blank.";
+                    errorMessage += "<br/>";
+                }
+                if(action.trim().length == 0) {
+                    errorMessage += "The action of your prediction was left blank.";
+                    errorMessage += "<br/>";
+                }
+                if(value.trim().length == 0) {
+                    errorMessage += "The price of the stock was left blank.";
+                    errorMessage += "<br/>";
+                }
+
+                $("#prediction-create-errors").html(errorMessage);
+                $("#prediction-create-errors").show();
             }
         });
 
