--- a/create.html
+++ b/create.html
@@ -198,7 +198,9 @@
             // and the epoch time 24 hours hours ago.
             var nowTime = parseInt((new Date).getTime()/1000);
             var yesterdayTime = parseInt((new Date).getTime()/1000) - (24*60*60);
-            populatePriceHistoryGraph($(event.target).val(), nowTime, yesterdayTime);
+            console.log("Yesterda TimeL " + yesterdayTime);
+            console.log("NOW TimeL " + nowTime);
+            populatePriceHistoryGraph($(event.target).val(), yesterdayTime, nowTime);
 
             $("#stock-price-history").show();
             $("#prediction-sentence").show();
