Prediction page now has fucntioning chart and prediction sentence (basic one for active predictions)

--- a/create.html
+++ b/create.html
@@ -93,6 +93,7 @@
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="http://code.highcharts.com/highcharts.js"></script>
   <script src="http://code.highcharts.com/modules/exporting.js"></script>
+  <script src="assets/js/shared.js"></script>
 
   <script>
     $(document).ready(function() {
@@ -313,119 +314,7 @@
         xmlhttp.send();
       };
 
-      populateSymbolsDropdown();
-
-      /**
-        * Return the price history between [startDateTime, endDateTime]
-        */
-      var populatePriceHistoryGraph = function (symbol, startDateTime, endDateTime) {
-        // clear the graph
-        $('#price-history-chart').highcharts({});
-        
-        // create the endpoint GET url with params
-        var stockPricesEndpoint = "http://104.131.219.239:3060/values?type=stock";
-        stockPricesEndpoint += "&object=";
-        stockPricesEndpoint += encodeURIComponent(String(symbol).trim());
-        stockPricesEndpoint += "&start=";
-        stockPricesEndpoint += encodeURIComponent(String(startDateTime).trim());
-        stockPricesEndpoint += "&end=";
-        stockPricesEndpoint += encodeURIComponent(String(endDateTime).trim());
-        console.log(stockPricesEndpoint);
-        // create the request result handler
-        var xmlhttp = new XMLHttpRequest();
-        xmlhttp.open("GET", stockPricesEndpoint, true);
-        xmlhttp.onreadystatechange=function() {
-          // if the status is correct, attempt to parse the response as an object
-          if(xmlhttp.readyState==4 && xmlhttp.status==200) {
-              var rawstockPriceHistory = xmlhttp.responseText;
-              var stockPriceHistory = JSON.parse(rawstockPriceHistory);
-              //console.log(stockPriceHistory);
-              // create seperate lists for prices and dates
-              var prices = Array();
-              var times = Array(); // epoch times
-              for (var i = 0; i < stockPriceHistory.length; i++) {
-                  // add the price to the prices array
-                  prices.push(parseFloat(stockPriceHistory[i].value));
-                  // get the time the price was recorded and add it to the time list
-                  var priceDate = new Date(0);
-                  priceDate.setSeconds(stockPriceHistory[i].time);
-                  var priceHour = priceDate.getHours();
-                  var priceMinute = priceDate.getMinutes();
-                  var timeSeperator = (priceMinute >= 10) ? ":" : ":0"; // pad with 0 if minute less than 10
-                  times.push(priceHour.toString() + timeSeperator + priceMinute.toString());
-              }
-              // draw the graph using the times (x-axis) and prices (y-axis)
-              drawPriceGraph(symbol, times, prices);
-          }
-        }
-
-        xmlhttp.send();
-      };
-
-      var drawPriceGraph = function (symbol, times, prices) {
-        console.log(times);
-        console.log(prices);
-          // populate the chart
-          $('#price-history-chart').highcharts({
-              chart: {
-                  zoomType: 'xy'
-              },
-              colors: ['#53B981'],
-              title: {
-                  text: ''
-              },
-              subtitle: {
-                  text: ''
-              },
-              exporting: {
-                  enabled: false
-              },
-              xAxis: [{
-                  categories: times,
-                  crosshair: true,
-                  title: {
-                      text: '<br/>Date and Time (EST)',
-                      style: {
-                          color: '#333A45'
-                      }
-                  },
-                  labels: {
-                      enabled: false
-                  }
-              }],
-              yAxis: [{
-                  min: Math.min.apply(Math, prices),
-                  gridLineWidth: 0,
-                  title: {
-                      text: 'Price ($)',
-                      style: {
-                          color: '#333A45'
-                      }
-                  },
-                  labels: {
-                      format: '{value}',
-                      style: {
-                          color: '#333A45'
-                      }
-                  }
-              }],
-              legend: {
-                  shared: true,
-                  enabled: false
-              },
-              series: [{
-                  name: 'Price',
-                  yAxis: 0,
-                  data: prices,
-                  tooltip: {
-                      valuePrefix: '$'
-                  }
-              }]
-          });
-
-          // clear highcharts graph footer
-          $($('body').find("text")[$('body').find("text").length - 1]).html("");  
-      }
+      populateSymbolsDropdown();      
     });
   </script>
 </html>
