--- a/prediction.html
+++ b/prediction.html
@@ -12,8 +12,8 @@
 
     <title>Narrow Jumbotron Template for Bootstrap</title>
 
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/custom.css" rel="stylesheet">
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../assets/css/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -37,6 +37,8 @@
     </style>
     <div class="container">
         <div class="jumbotron">
+            <div id="prediction-result" class="prediction-result">
+            </div>
             <div class="prediction-result">
                 <h2>Prediction is still valid.</h2>
                 <h4>Last checked on 10/8/2015 at 9:36am when the price was $92.77. Prediction's endtime is on 10/8/2015 at 4:55pm.</h4>
@@ -67,15 +69,21 @@
                     stay below: AAPL price stayed below $100.00 until the end of the prediction timeframe. The last price check was on 10/8/2015 at 2:55pm when the price was $99.97.
             -->
         </div>
+
+        <div id="stock-price-history" class="jumbotron">
+            <h3 style="text-align: center;"><span id="chart-header-symbol" style="color: #53B981;"></span> Stock Price Over the Past 24 Hours</h3>
+            <div id="price-history-chart" style="min-width: 310px; height: 400px; margin: 0 auto; padding-bottom: 10px;"></div>
+        </div>
+
         <div class="jumbotron">
             <h2 style="font-weight: bold;">Apple Inc. <span class="symbol">AAPL</span></h2>
-            <p style="color: #333A45; font-size: 100%;">
+            <!--<p style="color: #333A45; font-size: 100%;">
                 price at
                 <select>
                     <option>current time</option>
                     <option>time of prediction</option>
                 </select>
-            </p>
+            </p>-->
 
             <style>
                 .price-move-blink {
@@ -142,9 +150,10 @@
 
 </body>
 
-<script src="assets/js/jquery-1.11.3.min.js"></script>
+<script src="../assets/js/jquery-1.11.3.min.js"></script>
 <script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
+<script src="../assets/js/shared.js"></script>
 
 <script>
     $(document).ready(function () {
@@ -159,69 +168,74 @@
             restore_price_style_timeout = setTimeout(function () {
                 $("#current-price").removeClass("price-move-blink");
             }, 800);
-        });
+        }); 
 
-        // draw the price graph
-        var stockPriceTimes = ['9/28 12:00am', '9/28 1:00am', '9/28 2:00am', '9/28 3:00am', '9/28 4:00am', '9/28 5:00am', '9/28 6:00am', '9/28 7:00am', '9/28 8:00am', '9/28 9:00am', '9/28 10:00am', '9/28 11:00am', '9/28 12:00pm', '9/28 1:00pm', '9/28 2:00pm', '9/28 3:00pm', '9/28 4:00pm', '9/28 5:00pm', '9/28 6:00pm', '9/28 7:00pm', '9/28 8:00pm', '9/28 9:00pm', '9/28 10:00pm', '9/28 11:00pm'];
+        var setPredictionInfo = function() {
+            var thisUrl = window.location.href;
+            var predictionId = thisUrl.substring(thisUrl.indexOf('prediction/') + 
+                "prediction/".length);
+            // 5624696b3fec93e80f8f70ca
+            var predictionsEndpoint = "http://104.131.219.239:3060/predictions?id=";
+            predictionsEndpoint += predictionId.toString();
+            var xmlhttp = new XMLHttpRequest();
+            xmlhttp.open("GET", predictionsEndpoint, true);
+            xmlhttp.onreadystatechange=function() {
+                // if the status is correct, attempt to parse the response as an object
+                if(xmlhttp.readyState==4 && xmlhttp.status==200) {
+                    var rawPredictions = xmlhttp.responseText;
+                    var predictions = JSON.parse(rawPredictions);
+                    if(predictions.length >= 1) {
+                        // populate the price history graph with the recorded prices over the past 24 hours
+                        var nowTime = parseInt((new Date).getTime()/1000);
+                        var twentyFourHoursAgoTime = nowTime - (24*60*60);
+                        populatePriceHistoryGraph(predictions[0].object, 
+                            twentyFourHoursAgoTime,
+                            nowTime);
+                        $("#chart-header-symbol").html(predictions[0].object);
+                        // show the prediction status
+                        var predictionStatusHeader  = $("<h2></h2>");
+                        var predictionStatusBody  = $("<h4></h4>");
+                        if(predictions[0].status == "active") {
+                            var checkedDate = new Date(0);
+                            checkedDate.setSeconds(predictions[0].checked);
+                            var endDate = new Date(0);
+                            endDate.setSeconds(predictions[0].checked);
+                            // set the prediction status portion of the page
+                            predictionStatusHeader.html("Prediction is still valid.");
+                            var predictionBodyString = "Last checked on " + 
+                                checkedDate.toDateString() + " at " +
+                                ((checkedDate.getHours() + 1)%24).toString() + ":" + 
+                                checkedDate.getMinutes().toString() +
+                                " when the price was $" + /* todo get price then */ 
+                                ". Prediction ends on " + 
+                                endDate.toString();
+                            predictionStatusBody.html(predictionBodyString);
+                        }
 
-        var stockPrices = [189.22, 189.22, 189.22, 189.22, 189.22, 189.22, 189.22, 189.22, 189.22, 189.22, 189.28, 189.42, 189.62, 189.12, 188.92, 189.99, 189.67, 188.77, 188.77, 188.77, 188.77, 188.77, 188.77, 188.77];
+                        else if(false){
 
-        $('#chart-one').highcharts({
-            chart: {
-                zoomType: 'xy'
-            },
-            colors: ['#286090'],
-            title: {
-                text: ''
-            },
-            subtitle: {
-                text: ''
-            },
-            exporting: {
-                enabled: false
-            },
-            xAxis: [{
-                categories: stockPriceTimes,
-                crosshair: true,
-                title: {
-                    text: '<br/>Date and Time (EST)',
-                    style: {
-                        color: '#333A45'
+                        }
+                        else if(false) {
+
+                        }
+
+                        $("#prediction-result").html("");
+                        $("#prediction-result").append($(predictionStatusHeader));
+                        $("#prediction-result").append($(predictionStatusBody));
+
+
                     }
-                },
-                labels: {
-                    enabled: false
-                }
-            }],
-            yAxis: [{ // Primary yAxis
-                min: Math.min.apply(Math, stockPrices),
-                gridLineWidth: 0,
-                title: {
-                    text: 'Price ($)',
-                    style: {
-                        color: '#333A45'
+                    else {
+                        alert("Prediction not found.");
                     }
-                },
-                labels: {
-                    format: '{value}',
-                    style: {
-                        color: '#333A45'
-                    }
+                    
                 }
-            }],
-            legend: {
-                shared: true,
-                enabled: false
-            },
-            series: [{
-                name: 'Price',
-                yAxis: 0,
-                data: stockPrices,
-                tooltip: {
-                    valuePrefix: '$'
-                }
-            }]
-        });
+            }
+
+            xmlhttp.send();
+        }
+
+        setPredictionInfo();
     });
 </script>
 
